Updated swagger docs
