# pkg/api/deployment.go
@@ -6,13 +6,15 @@ import (
 )
 
 // listDeployments gets the list of the deployments in the k8s cluster.
-// @Summary Gets the list of the deployments in the k8s cluster.
-// @Description Gets the list of the deployments in the k8s cluster.
-// @Tags Kubernetes
-// @Accept  json
-// @Produce  json
-// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
-// @Router /api/v1/deployment/list [get]
+//
+//	@Summary		Gets the list of the deployments in the k8s cluster.
+//	@Description	Gets the list of the deployments in the k8s cluster.
+//	@Tags			Kubernetes
+//	@Accept			json
+//	@Param			namespace	query	string	false	"deployment search by namespace"	Format(string)
+//	@Produce		json
+//	@Success		200	"Sample result: "{\"deployments\":[],\"namespace\":\"default\",\"number_of_deployments\":0,\"status\":200}"	string
+//	@Router			/api/v1/deployment/list [get]
 func listDeployments(c *fiber.Ctx) error {
 	resource := "deployments"
 	namespace := c.Query("namespace")
