# pkg/api/namespace.go
@@ -8,13 +8,14 @@ import (
 )
 
 // listNamespaces gets the list of the namespaces in the k8s cluster.
-// @Summary Gets the list of the namespaces in the k8s cluster.
-// @Description Gets the list of the namespaces in the k8s cluster.
-// @Tags Kubernetes
-// @Accept  json
-// @Produce  json
-// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
-// @Router /api/v1/namespace/list [get]
+//
+//	@Summary		Gets the list of the namespaces in the k8s cluster.
+//	@Description	Gets the list of the namespaces in the k8s cluster.
+//	@Tags			Kubernetes
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	"Sample result: "{\"namespaces\":[],\"number_of_namespaces\":0,\"status\":200}"	string
+//	@Router			/api/v1/namespace/list [get]
 func listNamespaces(c *fiber.Ctx) error {
 	if kc.ClientSet == nil {
 		return c.Status(http.StatusInternalServerError).JSON(
