# pkg/api/node.go
@@ -8,13 +8,14 @@ import (
 )
 
 // listNodes gets the list of the nodes in the k8s cluster.
-// @Summary Gets the list of the nodes in the k8s cluster.
-// @Description Gets the list of the nodes in the k8s cluster.
-// @Tags Kubernetes
-// @Accept  json
-// @Produce  json
-// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
-// @Router /api/v1/node/list [get]
+//
+//	@Summary		Gets the list of the nodes in the k8s cluster.
+//	@Description	Gets the list of the nodes in the k8s cluster.
+//	@Tags			Kubernetes
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	"Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}""	string
+//	@Router			/api/v1/node/list [get]
 func listNodes(c *fiber.Ctx) error {
 	if kc.ClientSet == nil {
 		return c.Status(http.StatusInternalServerError).JSON(
